no docker
Signed-off-by: Dmitry Zakharov <zakharov@ie.ibm.com>